[package]
name = "axva_guessing_game"
version = "0.1.0"
edition = "2021"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"

[dependencies]
# Specifying a version like `"0.8.5"` is shorthand for `^0.8.5`.
# `^0.8.5` means any compatible version, i.e., `>= 0.8.5` and `< 0.9.0`.
rand = "0.8.5"
